--- a/presentacion/contenido.html
+++ b/presentacion/contenido.html
@@ -212,7 +212,7 @@
           <div class="carousel-item">
             <div id="temaA_1">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                <div class="display-4" >Estructura Dinamica <div class="text-right"> <img src="./images/vivani.png" style="width:90px;height:90px;"> </div> </div>
+                <div class="display-4" >Estructura Dinamica <div class="text-right"> <img src="./images/vivani.png" style="width:90px;height:90px;">  <img src="./images/raul.png" style="width:90px;height:90px;"> </div> </div>
                 <div class="card-body">
                   <div class="row">
                     <div class="col-4">
@@ -324,7 +324,7 @@
           <div class="carousel-item">
             <div id="temaA_1">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                <div class="display-4" >Estructura Dinamica <div class="text-right"> <img src="./images/vivani.png" style="width:90px;height:90px;"> </div> </div>
+                <div class="display-4" >Estructura Dinamica <div class="text-right"> <img src="./images/vivani.png" style="width:90px;height:90px;"> <img src="./images/raul.png" style="width:90px;height:90px;"></div> </div>
                 <div class="card-body">
                   <div class="row">
                     <div class="col-4">
@@ -378,7 +378,7 @@
           <div class="carousel-item">
             <div id="temaA_1">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
-                <div class="display-4" >Estructura Estática <div class="text-right"> <img src="./images/raul.png" style="width:90px;height:90px;"> <img src="./images/mauricio.png" style="width:90px;height:90px;"></div> </div>
+                <div class="display-4" >Estructura Estática <div class="text-right">  <img src="./images/mauricio.png" style="width:90px;height:90px;"></div> </div>
                 <div class="card-body">
                   <div class="row">
                     <div class="col-4">
