--- a/presentacion/contenido.html
+++ b/presentacion/contenido.html
@@ -208,7 +208,7 @@
               </div>
             </div>
           </div>
-          <!--Vivani-->
+          <!--Vivani & Raul-->
           <div class="carousel-item">
             <div id="temaA_1">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
@@ -320,7 +320,7 @@
               </div>
             </div>
           </div>
-          <!--Vivani-->
+          <!--Vivani & Raul-->
           <div class="carousel-item">
             <div id="temaA_1">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
@@ -374,7 +374,7 @@
               </div>
             </div>
           </div>
-          <!--Raul & Mauricio-->
+          <!--Mauricio-->
           <div class="carousel-item">
             <div id="temaA_1">
               <div class="card shadow-lg p-3 mb-5 bg-white rounded">
@@ -614,7 +614,62 @@
                 </div>
               </div>
             </div>
+
+
+          <!--Dinamica-->
+          <div class="carousel-item">
+            <div id="temaA_1">
+              <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+                <div class="display-4" >Dinámica </div>
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-5">
+                      <h6 class="display-10"></h6>
+                      <ol>
+                        <li>EL ANTECEDENTE MÁS IMPORTANTE SE UBICA EN 1967 CON LA METODOLOGÍA</li>
+                        <li>REPRESENTAN LOS REQUISITOS FUNCIONALES DEL SISTEMA</li>
+                        <li>BRINDA UNA GUÍA PARA ENCONTRAR, ORGANIZAR, DOCUMENTAR, Y SEGUIR LOS CAMBIOS DE LOS REQUISITOS FUNCIONALES Y RESTRICCIONES</li>
+                        <li>ES UN LENGUAJE PARA VISUALIZAR, ESPECIFICAR, CONSTRUIR Y DOCUMENTAR EL SOFTWARE</li>
+                        <li>DURANTE QUE FASE SE DEFINE EL MODELO DEL NEGOCIO Y EL ALCANCE DEL PROYECTO</li>
+                        <li>QUE FASE DESARROLLA EL PLAN DE PROYECTO</li>
+                        <li>PROPORCIONA UNA VISIÓN GENERAL DEL SISTEMA, UTILIZANDO VARIAS VISTAS DE</li>
+                        <li>LA FINALIDAD PRINCIPAL DE ESTA FASE ES ALCANZAR LA CAPACIDAD OPERACIONAL DEL PRODUCTO</li>
+                        <li>ESTRUCTURA QUE ESTABLECE LAS ACTIVIDADES ESPECÍFICAS DE CADA UNO DE LOS INTEGRANTES DEL EQUIPO DE DESARROLLO</li>
+                        <li>DEFINE EL COMPORTAMIENTO Y RESPONSABILIDADES DE UN INDIVIDUO</li>
+                      </ol>
+
+                      <!--
+                      <div class="list-group" id="list-tab" role="tablist">
+                        <a class="display-6 list-group-item list-group-item-action active" id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">Dinámica</a>
+                        <a class="display-6 list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">EL ANTECEDENTE MÁS IMPORTANTE SE UBICA EN 1967 CON LA METODOLOGÍA</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">REPRESENTAN LOS REQUISITOS FUNCIONALES DEL SISTEMA</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">BRINDA UNA GUÍA PARA ENCONTRAR, ORGANIZAR, DOCUMENTAR, Y SEGUIR LOS CAMBIOS DE LOS REQUISITOS FUNCIONALES Y RESTRICCIONES</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">ES UN LENGUAJE PARA VISUALIZAR, ESPECIFICAR, CONSTRUIR Y DOCUMENTAR EL SOFTWARE</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">DURANTE QUE FASE SE DEFINE EL MODELO DEL NEGOCIO Y EL ALCANCE DEL PROYECTO</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">QUE FASE DESARROLLA EL PLAN DE PROYECTO</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">PROPORCIONA UNA VISIÓN GENERAL DEL SISTEMA, UTILIZANDO VARIAS VISTAS DE</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">LA FINALIDAD PRINCIPAL DE ESTA FASE ES ALCANZAR LA CAPACIDAD OPERACIONAL DEL PRODUCTO</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">ESTRUCTURA QUE ESTABLECE LAS ACTIVIDADES ESPECÍFICAS DE CADA UNO DE LOS INTEGRANTES DEL EQUIPO DE DESARROLLO</a>
+                        <a class="list-group-item list-group-item-action " id="list-9A-list" data-toggle="list" href="#list-9A" role="tab" aria-controls="9A">DEFINE EL COMPORTAMIENTO Y RESPONSABILIDADES DE UN INDIVIDUO</a>
+                      </div>
+                    -->
+                    </div>
+                    <div class="col-7">
+                      <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active text-justify" id="list-9A" role="tabpanel" aria-labelledby="list-9A-list ">
+                          <div class="text-center"> <img src="./images/sopa.png" style="width:550px;height:550px;"> </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+
 
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
