--- a/presentacion/contenido.html
+++ b/presentacion/contenido.html
@@ -40,7 +40,11 @@
                         <div class="tab-pane fade show active text-justify" id="list-historia" role="tabpanel" aria-labelledby="list-historia-list ">
                           <h3 class="">
                           El antecedente más importante se ubica en 1967 con la Metodología Ericsson (Ericsson Approach) elaborada por Ivar Jacobson, una aproximación de desarrollo basada en componentes, que introdujo el concepto de Caso de Uso.
-                        </h3>
+                          <br>
+                          <center>
+                            <img src="./images/img1.png" style="width:450px;height:250px;">
+                          </center>
+                          </h3>
                         </div>
 
                         <div class="tab-pane fade text-justify" id="list-anos" role="tabpanel" aria-labelledby="list-anos-list">
@@ -95,6 +99,10 @@
                         <h3>
                           Según Kruchten, P. (2000), los caso de Uso son una técnica de captura de requisitos que fuerza a pensar en términos de importancia para el usuario y no solo en términos de funciones que sería bueno contemplar.
                         </h3>
+                          <br>
+                          <center>
+                          <img src="./images/img2.jpg" style="width:450px;height:250px;">
+                          </center>
                         </div>
                         <div class="tab-pane fade show text-justify" id="list-2A1" role="tabpanel" aria-labelledby="list-2A1-list ">
                         <h3>
@@ -173,32 +181,32 @@
                       <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active text-justify" id="list-3A" role="tabpanel" aria-labelledby="list-3A-list ">
                         <h3>
-                          RUP brinda una guía para encontrar, organizar, documentar, y seguir los cambios de los requisitosfuncionales y restricciones. Utiliza una notación de Caso de Uso y escenarios para representar losrequisitos.
+                          RUP brinda una guía para encontrar, organizar, documentar, y seguir los cambios de los requisitos funcionales y restricciones. Utiliza una notación de Caso de Uso y escenarios para representar los requisitos.
                         </h3>
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-3B" role="tabpanel" aria-labelledby="list-3B-list ">
                         <h3>
-                          Desarrollo del producto mediante iteraciones con hitos bien definidos, en las cuales se repiten lasactividades pero con distinto énfasis, según la fase del proyecto
+                          Desarrollo del producto mediante iteraciones con hitos bien definidos, en las cuales se repiten las actividades pero con distinto énfasis, según la fase del proyecto
                         </h3>
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-3C" role="tabpanel" aria-labelledby="list-3C-list ">
                         <h3>
-                          La creación de sistemas intensivos en software requiere dividir el sistema en componentes coninterfaces  bien definidas, que posteriormente serán ensamblados para generar el sistema. <BR><BR>Estacaracterística en un proceso de desarrollo permite que el sistema se vaya creando a medida que seobtienen o se desarrollan sus componentes
+                          La creación de sistemas intensivos en software requiere dividir el sistema en componentes coninterfaces  bien definidas, que posteriormente serán ensamblados para generar el sistema. <BR><BR>Esta característica en un proceso de desarrollo permite que el sistema se vaya creando a medida que seobtienen o se desarrollan sus componentes
                         </h3>
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-3D" role="tabpanel" aria-labelledby="list-3D-list ">
                         <h3>
-                          UML es un lenguaje para visualizar, especificar, construir y documentar el software. Utilizarherramientas de modelado visual facilita la gestión de dichos modelos, permitiendo ocultar oexponer detalles cuando sea necesario. <BR><BR>El modelado visual también ayuda a mantener laconsistencia. En resumen, el modelado visual ayuda a mejorar la capacidad del equipo paragestionar la complejidad del software
+                          UML es un lenguaje para visualizar, especificar, construir y documentar el software. Utilizar herramientas de modelado visual facilita la gestión de dichos modelos, permitiendo ocultar o exponer detalles cuando sea necesario. <BR><BR>El modelado visual también ayuda a mantener la consistencia. En resumen, el modelado visual ayuda a mejorar la capacidad del equipo para gestionar la complejidad del software
                         </h3>
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-3E" role="tabpanel" aria-labelledby="list-3E-list ">
                         <h3>
-                          es importante que la calidad se evalúe en varios puntos durante el proceso de desarrollo,especialmente al final de cada iteración. En esta verificación las pruebas juegan un papelfundamental y se integran a lo largo de todo el proceso
+                          Es importante que la calidad se evalúe en varios puntos durante el proceso de desarrollo, especialmente al final de cada iteración. En esta verificación las pruebas juegan un papel fundamental y se integran a lo largo de todo el proceso
                         </h3>
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-3F" role="tabpanel" aria-labelledby="list-3F-list ">
                         <h3>
-                          El cambio es un factor de riesgo crítico en los proyectos de software. El software cambia no sólodebido a acciones de mantenimiento posteriores a la entrega del producto, sino que durante elproceso de desarrollo, especialmente importantes por su posible impacto son los cambios en losrequisitos.
+                          El cambio es un factor de riesgo crítico en los proyectos de software. El software cambia no sólo debido a acciones de mantenimiento posteriores a la entrega del producto, sino que durante el proceso de desarrollo, especialmente importantes por su posible impacto son los cambios en los requisitos.
                         </h3>
                         </div>
                       </div>
@@ -231,14 +239,14 @@
                     </div>
                     <div class="col-8">
                       <div class="tab-content" id="nav-tabContent">
-                        <div class="tab-pane fade show active text-justify" id="list-2A" role="tabpanel" aria-labelledby="list-historia-list ">
+                        <div class="tab-pane fade show active text-justify" id="list-4A" role="tabpanel" aria-labelledby="list-4A-list ">
                         <h3>
                           RUP se repite a lo largo de una serie de ciclos que constituyen la vida de un producto.
                             <ol>
                             <li> Cada ciclo concluye con una generación del producto para los clientes </li>
                             <li> Cada ciclo consta de cuatro fases: Inicio, Elaboración, Construcción y Transición </li>
                             </ol>
-                            <div class="text-center"> <img src="./images/4A.png" style="width:150px;height:150px;">  </div>
+                            <div class="text-center"> <img src="./images/4A.png" style="width:250px;height:250px;">  </div>
                         </h3>
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-4B" role="tabpanel" aria-labelledby="list-4B-list ">
@@ -250,6 +258,7 @@
                           <li>Resultados: Documentacion de vision y requerimientos, modelo de negocio, glosario</li>
                         </OL>
                         </h3>
+                      <div class="text-center"> <img src="./images/img3.jpg" style="width:400px;height:250px;">  </div>
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-4C" role="tabpanel" aria-labelledby="list-4C-list ">
                         <h3>
@@ -258,6 +267,8 @@
                           <li>Determinar las fronteras del sistema, la identificación de prioridades y dependencias entre funcionalidades</li>
                           </ol>
                         </h3>
+                        <div class="text-center"> <img src="./images/img4.jpg" style="width:400px;height:250px;">  </div>
+
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-4D" role="tabpanel" aria-labelledby="list-4D-list ">
                         <h3>
@@ -265,6 +276,8 @@
                             <li>Establece y mantiene un acuerdo con los usuarios e involucrados sobre qué es lo que deberá hacer el sistema a desarrollar.</li>
                           </ol>
                         </h3>
+                        <div class="text-center"> <img src="./images/img5.jpg" style="width:400px;height:250px;">  </div>
+
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-4E" role="tabpanel" aria-labelledby="list-4E-list ">
                         <h3>
@@ -273,11 +286,14 @@
                             <li>Presentar las Áreas de Negocio involucradas y sus diferentes escenarios</li>
                           </ol>
                         </h3>
+
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-4H" role="tabpanel" aria-labelledby="list-4H-list ">
                         <h3>
                           Proporciona la definición de los principales términos, acrónimos y abreviaturas utilizados en el sistema.
                         </h3>
+                        <div class="text-center"> <img src="./images/img6.jpg" style="width:400px;height:250px;">  </div>
+
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-4I" role="tabpanel" aria-labelledby="list-4I-list ">
                         <h3>
@@ -296,6 +312,8 @@
                             <li>Validaciones y reglas de negocio a implementar.</li>
                           </ol>
                         </h3>
+                        <div class="text-center"> <img src="./images/img2.jpg" style="width:400px;height:250px;">  </div>
+
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-4K" role="tabpanel" aria-labelledby="list-4K-list ">
                         <h3>
@@ -427,6 +445,8 @@
                             <li>Las actividades tienen un objetivo concreto</li>
                           </ol>
                         </h3>
+                        <div class="text-center"> <img src="./images/img9.png" style="width:400px;height:250px;">  </div>
+
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-6D" role="tabpanel" aria-labelledby="list-6D-list ">
                         <h3>
@@ -443,6 +463,8 @@
 
                           </ol>
                         </h3>
+                        <div class="text-center"> <img src="./images/img10.png" style="width:400px;height:250px;">  </div>
+
                         </div>
                         <div class="tab-pane fade show  text-justify" id="list-6F" role="tabpanel" aria-labelledby="list-6F-list ">
                         <h3>
@@ -525,6 +547,8 @@
                         <h3>
                             Es un modelo de informática que almacena los datos en internet a través de un proveedor que administra y opera el almacenamiento en la nube como un servicio
                         </h3>
+                        <div class="text-center"> <img src="./images/img11.png" style="width:400px;height:250px;">  </div>
+
                         </div>
                       <div class="tab-pane fade show  text-justify" id="list-78" role="tabpanel" aria-labelledby="list-78-list ">
                       <h3>
@@ -614,7 +638,6 @@
                 </div>
               </div>
             </div>
-
 
           <!--Dinamica-->
           <div class="carousel-item">
