--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <a class="nav-item nav-link" href="recursos.html">Recursos</a>
                 <a class="nav-item nav-link" href="servicios.html">Servicios</a>
                 <a class="nav-item nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-item nav-link" href="web-vr/index.html">Web-VR</a>
               </div>
             </div>
           </nav>
