--- a/pruebas/plz/index.html
+++ b/pruebas/plz/index.html
@@ -44,7 +44,7 @@
       <div class="row div_0">
         <div class="col-sm-12 p-3 mb-2 div_0 text-dark ">
           <center>
-          <h1>Gruas Aris Tel.: 55 79 96 44 23 </h1>
+          <h1>Gruas Aris <a href="https://api.whatsapp.com/send?phone=525544038057&text=Necesito un servicio"> Tel.:  55 79 96 44 23 </a> </h1>
           </center>
         </div>
       </div>
@@ -125,7 +125,7 @@
         <div class="col-sm-6 ">
           <h2></h2>
             <ul>
-              <li>Tel.:  55 79 96 44 23 </li>
+              <li><a href="https://api.whatsapp.com/send?phone=525544038057&text=Necesito un servicio"> Tel.:  55 79 96 44 23 </a> </li>
               <li>email.:  gruaaris@gmail.com </li>
             </ul>
         </div>
