--- a/pruebas/plz/index.html
+++ b/pruebas/plz/index.html
@@ -64,8 +64,11 @@
             <ul>
               <li> Atizapan de Zaragoza </li>
               <li> Nicolás Romero </li>
-              <li> Tlalnepantla de Baz </li>
+              <li> Tlalnepantla des Baz </li>
             </ul>
+            <a href="https://api.whatsapp.com/send?phone=525544038057&text=Necesito un servicio">
+            <img src="images/w.png" class="img-fluid" alt="Responsive image" width="80" height="80"> <button type="button" class="btn btn-success"> Comunicate ! </button>
+            </a>
         </div>
       </div>
 
